...
                .tabItem {
                    Label("Scores", systemImage: "soccerball")
                }
                .tag(0)
            TablesView()
                .tabItem {
                    Label("Tables", systemImage: "tablecells")
                }
                .tag(1)
            FantasyView(isSelected: selectedTab == 2)
                .tabItem {
                    Label {
                        Text("FPL")
...
